@@ -146,4 +146,21 @@ namespace LHAPDF {
   }
 
 
+  AlphaS* mkAlphaS(const std::string& setname) {
+    return mkAlphaS(getPDFSet(setname));
+  }
+
+
+  AlphaS* mkAlphaS(const std::string& setname, int member) {
+    auto_ptr<Info> info( mkPDFInfo(setname, member) );
+    return mkAlphaS(*info);
+  }
+
+
+  AlphaS* mkAlphaS(int lhaid) {
+    auto_ptr<Info> info( mkPDFInfo(lhaid) );
+    return mkAlphaS(*info);
+  }
+
+
 }
