@@ -1,5 +1,7 @@
 2013-07-08  Andy Buckley  <andy.buckley@cern.ch>
 
+	* Adding factory methods for making AlphaS objects direct from set names / member numbers.
+
 	* Adding/updating NumFlavors + FlavorScheme metadata flags and add TODOs to respect them.
 
 	* Updated ipol alpha_s solver to operate in log space: smoother behaviour now.
